force-app/main/default/objects/address__c/address__c.object-meta.xml
<CustomObject>
    <label>address</label>
    <nameField>
        <displayFormat>ADRID-{00000000}</displayFormat>
        <label>address id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>address</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>