force-app/main/default/objects/address__c/fields/address_line_1__c.field-meta.xml
<CustomField>
    <fullName>address_line_1__c</fullName>
    <label>address line 1</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>