force-app/main/default/objects/address__c/fields/address_line_2__c.field-meta.xml
<CustomField>
    <fullName>address_line_2__c</fullName>
    <label>address line 2</label>
    <type>TextArea</type>
</CustomField>