force-app/main/default/objects/address__c/fields/applicant__c.field-meta.xml
<CustomField>
    <fullName>applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>applicant</label>
    <referenceTo>applicant__c</referenceTo>
    <relationshipLabel>address</relationshipLabel>
    <relationshipName>address_del</relationshipName>
    <type>Lookup</type>
</CustomField>