force-app/main/default/objects/address__c/fields/applicant_pan_card__c.field-meta.xml
<CustomField>
    <fullName>applicant_pan_card__c</fullName>
    <formula>IF(  applicant__r.age__c &gt;=18,  applicant__r.pan_card__c ,  &apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>applicant pan card</label>
    <type>Text</type>
</CustomField>