force-app/main/default/objects/address__c/fields/city__c.field-meta.xml
<CustomField>
    <fullName>city__c</fullName>
    <label>city</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Ahmedabad</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>Surat</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Jaipur</fullName>
            </value>
            <value>
                <fullName>Lucknow</fullName>
            </value>
            <value>
                <fullName>Kanpur</fullName>
            </value>
            <value>
                <fullName>Nagpur</fullName>
            </value>
            <value>
                <fullName>sindh</fullName>
            </value>
            <value>
                <fullName>madras</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>