force-app/main/default/objects/address__c/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <label>country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Indonesia</fullName>
            </value>
            <value>
                <fullName>Pakistan</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>Bangladesh</fullName>
            </value>
            <value>
                <fullName>Russia</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Ethiopia</fullName>
            </value>
            <value>
                <fullName>Philippines</fullName>
            </value>
            <value>
                <fullName>bali</fullName>
            </value>
            <value>
                <fullName>nepal</fullName>
            </value>
            <value>
                <fullName>United States</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
                <isActive>false</isActive>
                <label>Mexico</label>
            </value>
            <value>
                <fullName>Nigeria</fullName>
                <isActive>false</isActive>
                <label>Nigeria</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>