force-app/main/default/objects/address__c/fields/pin_code__c.field-meta.xml
<CustomField>
    <fullName>pin_code__c</fullName>
    <label>pin code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>