force-app/main/default/objects/address__c/fields/plot__c.field-meta.xml
<CustomField>
    <fullName>plot__c</fullName>
    <label>plot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>