force-app/main/default/objects/address__c/validationRules/shakira_error.validationRule-meta.xml
<ValidationRule>
    <fullName>shakira_error</fullName>
    <active>false</active>
    <errorConditionFormula>$User.Id ==&apos;0055i000001RWOY&apos;</errorConditionFormula>
    <errorMessage>shakira error</errorMessage>
</ValidationRule>